Added Polistil case study

--- a/settings.gradle
+++ b/settings.gradle
@@ -25,4 +25,6 @@ include 'examples:envzompr'
 findProject(':examples:envzompr')?.name = 'envzompr'
 include 'examples:Lotka'
 findProject(':examples:Lotka')?.name = 'Lotka'
+include 'examples:polistil'
+findProject(':examples:polistil')?.name = 'polistil'
 
