--- a/settings.gradle
+++ b/settings.gradle
@@ -19,12 +19,11 @@ include 'examples:Isocitrate'
 findProject(':examples:Isocitrate')?.name = 'Isocitrate'
 include 'examples:repressilator'
 findProject(':examples:repressilator')?.name = 'repressilator'
-include 'examples:repressilator copy'
-findProject(':examples:repressilator copy')?.name = 'repressilator copy'
+include 'examples:skorokhodRobustnessTest'
+findProject(':examples:skorokhodRobustnessTest')?.name = 'skorokhodRobustnessTest'
 include 'examples:temp-repressilator'
 findProject(':examples:temp-repressilator')?.name = 'temp-repressilator'
 include 'examples:tollbooth'
 findProject(':examples:tollbooth')?.name = 'tollbooth'
 include 'examples:envzompr'
 findProject(':examples:envzompr')?.name = 'envzompr'
-
