--- a/settings.gradle
+++ b/settings.gradle
@@ -21,8 +21,8 @@ include 'examples:repressilator'
 findProject(':examples:repressilator')?.name = 'repressilator'
 include 'examples:skorokhodRobustnessTest'
 findProject(':examples:skorokhodRobustnessTest')?.name = 'skorokhodRobustnessTest'
-include 'examples:temp-repressilator'
-findProject(':examples:temp-repressilator')?.name = 'temp-repressilator'
+include 'examples:repressilator-skorokhod'
+findProject(':examples:repressilator-skorokhod')?.name = 'repressilator-skorokhod'
 include 'examples:tollbooth'
 findProject(':examples:tollbooth')?.name = 'tollbooth'
 include 'examples:envzompr'
