Added multiple sclerosis example draft

--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,6 @@ findProject(':examples:envzompr')?.name = 'envzompr'
 include 'examples:Lotka'
 findProject(':examples:Lotka')?.name = 'Lotka'
 include('examples:monitoring:basic')
+include 'examples:mutliScler'
+findProject(':examples:mutliScler')?.name = 'mutliScler'
+
